Added meta models, movies models, and constants

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "bookmyshow_clone_backend_django"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^4.1.6"
+django-fsm = "^2.8.1"
+graphene-django = "^3.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
