--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ graphene-django = "^3.0.0"
 black = "^23.1.0"
 django-environ = "^0.9.0"
 autoflake = "^2.0.1"
+django-graphiql-debug-toolbar = "^0.2.0"
 
 
 [tool.poetry.group.local.dependencies]
