--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,5 @@ psycopg2-binary = "^2.9.5"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.black]
+line-length = 80
